--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,12 @@
                 </div>
                 <ul class="list-group" ng-cloak>
                     <li class="list-group-item" ng-repeat="task in test.tasks" ng-class="{'active': task === test.currentTask}" ng-controller="NotificationController as note" ng-init="note.setTask(task); note.setErrorHandlers(test.clearError, test.handleApiError); note.setUser(test.me);">
-                        <span ng-click="test.getTurnsAndStatus(task.taskId)">{{task.taskName}}</span>
+                        <span class="task-name" ng-click="test.getTurnsAndStatus(task.taskId)">{{task.taskName}}</span>
                         <button type="button" class="close close-inline glyph-inline pad" ng-show="!note.newNote.notification" ng-click="note.add()"><span class="glyphicon glyphicon-plus"></span></button>
                         <button type="button" class="close close-inline glyph-inline" ng-show="note.pending && note.valid" ng-click="note.update()"><span class="glyphicon glyphicon-floppy-disk"></span></button>
                         <span class="error" ng-show="!note.valid">{{note.invalidNote}}</span>
                         <span ng-show="note.waiting" class="faded"> updating...</span>
-                        <button type="button" class="close close-inline glyph-inline pull-right" ng-click""><span class="glyphicon glyphicon-pencil"></span></button>
+                        <button type="button" class="close close-inline glyph-inline pull-right" ng-if="task === test.currentTask" data-toggle="collapse" data-target="{{'#EditTaskPanel' + $index}}"><span class="glyphicon glyphicon-pencil"></span></button>
                         <form class="form-inline" novalidate>
                             <div ng-if="note.newNote.notification">
                                 Send <select ng-options="item.id as item.label for item in test.methods" ng-model="note.newNote.method_id">
@@ -73,6 +73,28 @@
                                 <button type="button" class="close close-inline glyph-inline pad" ng-click="note.remove()"><span class="glyphicon glyphicon-remove"></span></button>
                             </div>
                         </form>
+                        <div class="collapse" id="{{'EditTaskPanel' + $index}}" ng-if="test.allUsers.length > 0 && task === test.currentTask" ng-controller="CreateOrEditTaskController as edit" ng-init="edit.setErrorHandlers(test.clearError, test.handleApiError); edit.setUsers(test.me, test.allUsers); edit.setTask(task, test.users);">
+                            <form novalidate>
+                                <fieldset ng-disabled="user.busy">
+                                    <div class="form-group">
+                                        <label for="{{'EditTaskName' + $index}}">Name</label>
+                                        <input id="{{'EditTaskName' + $index}}" type="text" class="form-control" ng-model="edit.name" placeholder="name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="{{'EditTaskHours' + $index}}">Periodic Hours</label>
+                                        <input id="{{'EditTaskHours' + $index}}" type="number" min="0" step="1" class="form-control" ng-model="edit.hours" placeholder="0">
+                                        <span>Set to 0 for intermediate</span>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="{{'EditTaskUsersSelect' + $index}}">Users</label>
+                                        <select id="{{'EditTaskUsersSelect' + $index}}" class="form-control" multiple ng-attr-size="{{edit.users.length}}" ng-options="user.id as user.name for user in edit.users" ng-model="edit.selectedUsers">
+                                        </select>
+                                        <p><label>Selected:&nbsp;</label><span ng-repeat="id in edit.selectedUsers">{{edit.userMap[id].name}}, </span>{{edit.me.name}}</p>
+                                    </div>
+                                    <button type="button" class="btn btn-default" ng-click="edit.save()">Save Task</button>
+                                </fieldset>
+                            </form>
+                        </div>
                     </li>
                 </ul>
                 <ul class="list-group" ng-cloak>
@@ -80,7 +102,7 @@
                 </ul>
                 <div class="panel panel-primary" ng-controller="CreateUserController as user" ng-init="user.setErrorHandlers(test.clearError, test.handleApiError);">
                     <div class="panel-heading">
-                        <a data-toggle="collapse" href="#NewUserPanel"><h4 class="panel-title">Create User</h4></a>
+                        <a data-toggle="collapse" data-target="#NewUserPanel"><h4 class="panel-title">Create User</h4></a>
                     </div>
                     <div id="NewUserPanel" class="panel-collapse collapse">
                         <div class="panel-body">
@@ -100,9 +122,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-primary" ng-if="test.allUsers.length > 0" ng-controller="CreateTaskController as task" ng-init="task.setErrorHandlers(test.clearError, test.handleApiError); task.setUsers(test.me, test.allUsers);">
+                <div class="panel panel-primary" ng-if="test.allUsers.length > 0" ng-controller="CreateOrEditTaskController as task" ng-init="task.setErrorHandlers(test.clearError, test.handleApiError); task.setUsers(test.me, test.allUsers);">
                     <div class="panel-heading">
-                        <a data-toggle="collapse" href="#NewTaskPanel"><h4 class="panel-title">Create Task</h4></a>
+                        <a data-toggle="collapse" data-target="#NewTaskPanel"><h4 class="panel-title">Create Task</h4></a>
                     </div>
                     <div id="NewTaskPanel" class="panel-collapse collapse">
                         <div class="panel-body">
@@ -131,7 +153,7 @@
                 </div>     
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <a data-toggle="collapse" href="#DebugPanel"><h4 class="panel-title">Debug</h4></a>
+                        <a data-toggle="collapse" data-target="#DebugPanel"><h4 class="panel-title">Debug</h4></a>
                     </div>
                     <div id="DebugPanel" class="panel-collapse collapse">
                         <div class="panel-body">
