--- a/public/index.html
+++ b/public/index.html
@@ -157,6 +157,7 @@
                     </div>
                     <div id="DebugPanel" class="panel-collapse collapse">
                         <div class="panel-body">
+                            <button type="button" class="btn btn-warning" ng-click="test.remind()">Remind</button>
                             <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
                             <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
                             <button type="button" class="btn btn-info" ng-click="test.getSubscriptions()">Subs</button>
