hack in some deleting from the page

--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,7 @@
                         <div class="panel-body">
                             <button type="button" class="btn btn-warning" ng-click="test.remind()">Remind</button>
                             <button type="button" class="btn btn-warning" ng-click="test.notify()">Notify</button>
+                            <button type="button" class="btn btn-danger" ng-click="test.deleteTask()">Delete</button>
                             <button type="button" class="btn btn-info" ng-click="test.getUsers()">Users</button>
                             <button type="button" class="btn btn-info" ng-click="test.getSubscriptions()">Subs</button>
                             <button type="button" class="btn btn-info" ng-click="test.getUser('user11')">User</button>
